[gd_scene load_steps=7 format=3 uid="uid://dkqfovnosijms"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/fraction_problem.gd" id="1_3lx3t"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_mxrjf"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="2_60jsg"]
[ext_resource type="Script" path="res://helpers/text_control.gd" id="3_8ipeh"]
[ext_resource type="Texture2D" uid="uid://brh6b8ufqdjks" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/board_box.png" id="3_vgptb"]
[ext_resource type="PackedScene" uid="uid://qi0gyl783jj2" path="res://scenes/ui/congratulations.tscn" id="6_6gx5x"]

[node name="FractionProblem" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_3lx3t")
metadata/_edit_vertical_guides_ = [-102.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Result" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "Answer the Question"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Problem" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Fraction1" type="MarginContainer" parent="VBoxContainer/Problem"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Problem/Fraction1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Numerator" type="Label" parent="VBoxContainer/Problem/Fraction1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Divider" type="Label" parent="VBoxContainer/Problem/Fraction1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Denominator" type="Label" parent="VBoxContainer/Problem/Fraction1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Operator" type="MarginContainer" parent="VBoxContainer/Problem"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Problem/Operator"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fraction2" type="MarginContainer" parent="VBoxContainer/Problem"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Problem/Fraction2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Numerator" type="Label" parent="VBoxContainer/Problem/Fraction2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Divider" type="Label" parent="VBoxContainer/Problem/Fraction2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Denominator" type="Label" parent="VBoxContainer/Problem/Fraction2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Equals" type="MarginContainer" parent="VBoxContainer/Problem"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Problem/Equals"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="Answer" type="MarginContainer" parent="VBoxContainer/Problem"]
layout_mode = 2

[node name="Fraction" type="VBoxContainer" parent="VBoxContainer/Problem/Answer"]
layout_mode = 2

[node name="TextControl" type="Control" parent="VBoxContainer/Problem/Answer/Fraction"]
layout_mode = 2
script = ExtResource("3_8ipeh")

[node name="Numerator" type="MarginContainer" parent="VBoxContainer/Problem/Answer/Fraction"]
layout_mode = 2

[node name="NumeratorAnswer" type="LineEdit" parent="VBoxContainer/Problem/Answer/Fraction/Numerator"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_60jsg")
placeholder_text = "0"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Problem/Answer/Fraction/Numerator"]
layout_mode = 2
texture = ExtResource("3_vgptb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Divider" type="Label" parent="VBoxContainer/Problem/Answer/Fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "-"
horizontal_alignment = 1

[node name="Denominator" type="MarginContainer" parent="VBoxContainer/Problem/Answer/Fraction"]
layout_mode = 2

[node name="DenominatorAnswer" type="LineEdit" parent="VBoxContainer/Problem/Answer/Fraction/Denominator"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_60jsg")
placeholder_text = "0"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Problem/Answer/Fraction/Denominator"]
layout_mode = 2
texture = ExtResource("3_vgptb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Submit" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubmitAnswer" type="Button" parent="VBoxContainer/Submit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mxrjf")
text = "SUBMIT"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Submit"]
layout_mode = 2
texture = ExtResource("3_vgptb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Congrats" parent="." instance=ExtResource("6_6gx5x")]
visible = false
layout_mode = 2

[connection signal="incorrect" from="." to="." method="_on_incorrect"]
[connection signal="text_changed" from="VBoxContainer/Problem/Answer/Fraction/Numerator/NumeratorAnswer" to="VBoxContainer/Problem/Answer/Fraction/TextControl" method="_on_numerator_answer_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Problem/Answer/Fraction/Denominator/DenominatorAnswer" to="VBoxContainer/Problem/Answer/Fraction/TextControl" method="_on_denominator_answer_text_changed"]
[connection signal="pressed" from="VBoxContainer/Submit/SubmitAnswer" to="." method="_on_submit_answer_pressed"]
